--- a/Animetick/Views/ATTicketCell.xib
+++ b/Animetick/Views/ATTicketCell.xib
@@ -7,83 +7,102 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="blue" indentationWidth="10" rowHeight="74" id="2" customClass="ATTicketCell">
+        <tableViewCell contentMode="scaleToFill" ambiguous="YES" selectionStyle="blue" indentationWidth="10" rowHeight="530" id="2" customClass="ATTicketCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="2" id="1sw-Kg-ezp">
                 <rect key="frame" x="0.0" y="0.0" width="320" height="73"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3" userLabel="icon">
-                        <rect key="frame" x="52" y="10" width="50" height="50"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="3" userLabel="icon">
+                        <rect key="frame" x="8" y="12" width="50" height="50"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="50" id="8"/>
-                            <constraint firstAttribute="height" constant="50" id="9"/>
+                            <constraint firstAttribute="width" constant="50" id="9nd-FU-qC1"/>
+                            <constraint firstAttribute="height" constant="50" id="VXI-20-GQd"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" ambiguous="YES" misplaced="YES" text="ふたりはミルキィホームズ #4" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="15" userLabel="title">
-                        <rect key="frame" x="110" y="10" width="247" height="16"/>
+                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="7Rw-wt-QTG" userLabel="text_info_container">
+                        <rect key="frame" x="66" y="0.0" width="202" height="55"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" ambiguous="YES" text="ふたりはミルキィホームズ #4" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="15" userLabel="title">
+                                <rect key="frame" x="0.0" y="10" width="202" height="16"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="16" id="kE9-P9-hqd"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" ambiguous="YES" text="まけないきもち " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="26" userLabel="subTitle">
+                                <rect key="frame" x="0.0" y="20" width="202" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="80"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" ambiguous="YES" text="Channel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="41" userLabel="channel">
+                                <rect key="frame" x="0.0" y="40" width="43" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="85"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </label>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" ambiguous="YES" text="01/01 23:30〜" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="48" userLabel="startAt">
+                                <rect key="frame" x="0.0" y="30" width="202" height="20"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="85j-QD-kht"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="11"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="16" id="116"/>
-                            <constraint firstAttribute="width" constant="247" id="158"/>
+                            <constraint firstItem="15" firstAttribute="leading" secondItem="7Rw-wt-QTG" secondAttribute="leading" id="3Ve-oJ-8zU"/>
+                            <constraint firstItem="48" firstAttribute="top" secondItem="7Rw-wt-QTG" secondAttribute="top" constant="30" id="6pV-0R-nv0"/>
+                            <constraint firstItem="48" firstAttribute="leading" secondItem="7Rw-wt-QTG" secondAttribute="leading" id="IPe-bN-qhv"/>
+                            <constraint firstAttribute="trailing" secondItem="15" secondAttribute="trailing" id="VPh-XC-LsO"/>
+                            <constraint firstAttribute="trailing" secondItem="48" secondAttribute="trailing" id="ZtS-zZ-9mO"/>
+                            <constraint firstItem="15" firstAttribute="top" secondItem="7Rw-wt-QTG" secondAttribute="top" constant="10" id="ezx-lu-qZm"/>
+                            <constraint firstItem="41" firstAttribute="top" secondItem="7Rw-wt-QTG" secondAttribute="top" constant="40" id="hXK-bX-QVF"/>
+                            <constraint firstItem="26" firstAttribute="leading" secondItem="7Rw-wt-QTG" secondAttribute="leading" id="nGC-ID-NOx"/>
+                            <constraint firstAttribute="trailing" secondItem="26" secondAttribute="trailing" id="rgd-Le-uWw"/>
+                            <constraint firstItem="41" firstAttribute="leading" secondItem="7Rw-wt-QTG" secondAttribute="leading" id="u5y-lW-nXC"/>
+                            <constraint firstItem="26" firstAttribute="top" secondItem="7Rw-wt-QTG" secondAttribute="top" constant="20" id="yeA-fM-J4n"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="boldSystem" pointSize="14"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" ambiguous="YES" misplaced="YES" text="まけないきもち " lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="26" userLabel="subTitle">
-                        <rect key="frame" x="110" y="25" width="247" height="20"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="80"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" ambiguous="YES" misplaced="YES" text="Channel" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="41" userLabel="channel">
-                        <rect key="frame" x="110" y="40" width="247" height="20"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="85"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </label>
-                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" ambiguous="YES" misplaced="YES" text="01/01 23:30〜" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="48" userLabel="startAt">
-                        <rect key="frame" x="110" y="53" width="247" height="20"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="20" id="84"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                        <color key="highlightedColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </label>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="72m-rK-ouz" customClass="ATCheckbox">
-                        <rect key="frame" x="0.0" y="8" width="44" height="52"/>
+                    </view>
+                    <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="72m-rK-ouz" userLabel="checkbox" customClass="ATCheckbox">
+                        <rect key="frame" x="276" y="0.0" width="44" height="73"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="44" id="izK-FL-6bD"/>
+                        </constraints>
                     </view>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="72m-rK-ouz" secondAttribute="bottom" id="4QF-g5-gbJ"/>
+                    <constraint firstAttribute="trailing" secondItem="72m-rK-ouz" secondAttribute="trailing" id="8fh-TK-TOu"/>
+                    <constraint firstAttribute="bottom" secondItem="7Rw-wt-QTG" secondAttribute="bottom" constant="18" id="JtT-zx-lLy"/>
+                    <constraint firstAttribute="centerY" secondItem="3" secondAttribute="centerY" id="UR0-mp-Tim"/>
+                    <constraint firstItem="72m-rK-ouz" firstAttribute="leading" secondItem="7Rw-wt-QTG" secondAttribute="trailing" constant="8" symbolic="YES" id="Vkn-Ea-y5I"/>
+                    <constraint firstItem="72m-rK-ouz" firstAttribute="top" secondItem="1sw-Kg-ezp" secondAttribute="top" id="Xnc-nr-JKi"/>
+                    <constraint firstItem="3" firstAttribute="leading" secondItem="1sw-Kg-ezp" secondAttribute="leading" constant="8" id="ehi-uy-sqK"/>
+                    <constraint firstItem="7Rw-wt-QTG" firstAttribute="leading" secondItem="3" secondAttribute="trailing" constant="8" symbolic="YES" id="q78-ky-Hcv"/>
+                    <constraint firstItem="7Rw-wt-QTG" firstAttribute="top" secondItem="1sw-Kg-ezp" secondAttribute="top" id="r3b-a6-1M0"/>
+                </constraints>
             </tableViewCellContentView>
-            <constraints>
-                <constraint firstItem="41" firstAttribute="leading" secondItem="3" secondAttribute="trailing" constant="8" symbolic="YES" id="BuT-Bw-b1P"/>
-                <constraint firstItem="48" firstAttribute="trailing" secondItem="41" secondAttribute="trailing" id="Czf-6N-gBx"/>
-                <constraint firstItem="41" firstAttribute="trailing" secondItem="26" secondAttribute="trailing" id="FNT-5B-wpa"/>
-                <constraint firstItem="26" firstAttribute="leading" secondItem="3" secondAttribute="trailing" constant="8" symbolic="YES" id="GO4-cc-Roa"/>
-                <constraint firstItem="15" firstAttribute="leading" secondItem="3" secondAttribute="trailing" constant="8" symbolic="YES" id="LAL-78-TVc"/>
-                <constraint firstItem="48" firstAttribute="leading" secondItem="3" secondAttribute="trailing" constant="8" symbolic="YES" id="MYl-qw-rOC"/>
-                <constraint firstItem="26" firstAttribute="centerY" secondItem="3" secondAttribute="centerY" id="MyJ-MY-Hn1"/>
-                <constraint firstItem="41" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" id="lWG-L7-Prp"/>
-                <constraint firstItem="48" firstAttribute="top" secondItem="26" secondAttribute="bottom" constant="8" symbolic="YES" id="m95-UG-YXZ"/>
-                <constraint firstItem="26" firstAttribute="trailing" secondItem="15" secondAttribute="trailing" id="oDS-MN-laT"/>
-                <constraint firstItem="3" firstAttribute="top" secondItem="2" secondAttribute="top" constant="10" id="q7I-2e-wZP"/>
-                <constraint firstItem="15" firstAttribute="top" secondItem="3" secondAttribute="top" id="v2m-EB-jsi"/>
-            </constraints>
             <connections>
                 <outlet property="channel" destination="41" id="73"/>
                 <outlet property="icon" destination="3" id="25"/>
